<resources>
    <string name="app_name">Food Hub</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="favourite_restaurants">Favourite Restaurants</string>
    <string name="order_history">Order History</string>
    <string name="faqs">FAQs</string>
    <string name="log_out">Log Out</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="sign_up"><u>Do not have an account? Sign Up now</u></string>
    <string name="email_address">Email Address</string>
    <string name="name">Name(Min 3 characters)</string>
    <string name="mobile_number">Mobile Number (10 digits)</string>
    <string name="password">Password</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="password_new">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="instruction">Enter your registered mobile number and email address below :</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="q_1">How the food will be delivered ?</string>
    <string name="a_1">A1. The food will be delivered via our delivery boy.</string>
    <string name="q_2">How much time an order take to be delivered ?</string>
    <string name="a_2">An order take maximum 30 minutes but not more than that.</string>
    <string name="q_3">Where I can find the restaurants details ?</string>
    <string name="a_3">In the Restaurants Page.</string>
    <string name="q_4">Food Quality ?</string>
    <string name="a_4">We delivered the best quality food in the market from well known restaurants.</string>
    <string name="q_5">Payment method ?</string>
    <string name="a_5">We offer both offline and online. Enjoy the delicious and healthy food.</string>
    <string name="proceed">Proceed to Cart</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="preferences_file_register">Register Preferences</string>
    <string name="preferences_file_profile">Profile Preferences</string>
    <string name="login_preferences">Login Preferences</string>
    <string name="new_password">New Password(Min. 4 characters)</string>
    <string name="action_sort">Sort</string>
    <string name="place_order">Place Order ()</string>
    <string name="successfully_placed">Your order has been successfully placed!</string>
</resources>