<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.ProfileFragment"
    android:background="@color/deep_orange">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/imgProfileIcon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/profile_icon"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="140dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textSize="18sp"
        android:padding="8dp"
        android:background="#ffffff"
        android:layout_margin = "5dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/txtMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_number"
        android:textSize="18sp"
        android:background="#ffffff"
        android:padding="8dp"
        android:layout_margin = "5dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:textSize="18sp"
        android:padding="8dp"
        android:background="#ffffff"
        android:layout_margin="5dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/txtDeliveryAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/delivery_address"
        android:textSize="18sp"
        android:background="#ffffff"
        android:padding="8dp"
        android:layout_margin="5dp"
        android:textAlignment="center"/>


</LinearLayout>