<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deep_orange">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/deep_orange"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"/>

    <ImageView
        android:id="@+id/imgLogoImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/app_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"/>

    <TextView
        android:id="@+id/txtInstruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgLogoImage"
        android:text="@string/instruction"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:layout_margin="10dp"
        android:padding="8dp"/>

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:layout_below="@id/txtInstruction"
        android:layout_margin="10dp"
        android:hint="@string/mobile_number"
        android:padding="8dp"
        android:drawableLeft="@drawable/ic_mobile_number"
        android:inputType="number"
        android:maxLength="10"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:layout_below="@id/etMobileNumber"
        android:layout_margin="10dp"
        android:padding="8dp"
        android:hint="@string/email_address"
        android:drawableLeft="@drawable/ic_email"
        android:inputType="text"/>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button"
        android:text="Next"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_below="@id/etEmail"
        android:layout_margin="10dp"
        android:padding="8dp"/>

</RelativeLayout>